--- a/styles/styles.css
+++ b/styles/styles.css
@@ -381,7 +381,7 @@ body {
   font-size: 20px;
   font-weight: 700;
   line-height: 36px;
-  color: rgba(255, 255, 255, 1);befo
+  color: rgba(255, 255, 255, 1);
   text-decoration: none;
   text-align: center;
   max-width: 376px;
@@ -491,8 +491,16 @@ input {
 .footer_social {
   max-width: 142px;
   margin-right: 41.5px;
+  height: 40px;
   display: flex;
   justify-content: space-between;
+ align-items: center;
+}
+
+.social_logo {
+  display: flex;
+  justify-content: space-between;
+ align-items: flex-end;
 }
 
 .footer_link {
@@ -537,7 +545,7 @@ input {
 .page_inner {
   margin: 0;
   color: rgba(255, 255, 255, 1);
-  background-image: url("../images/catalog/background.jpg");
+  background-image: url("../images/catalog/background_iner.jpg");
   background-repeat: no-repeat;
   height: 408px;
 }
@@ -745,7 +753,6 @@ input {
   margin: 0;
   background-color: rgba(255, 255, 255, 1);
   padding-left: 50px;
-
 }
 
 .product_card {
@@ -766,7 +773,6 @@ input {
   line-height: 28px;
   color: rgba(0, 0, 0, 1);
   text-decoration: none;
-  text-align: center;
   width: 300px;
   padding-top: 16px;
   padding-bottom: 16px;
@@ -946,7 +952,7 @@ input {
   position: absolute;
   height: 20px;
   width: 70px;
-  background: url("../images/catalog/star.svg") repeat-x;
+  background: url("../images/catalog/stars.svg") repeat-x;
 }
 
 .card_rating_three::before {
@@ -956,7 +962,7 @@ input {
   position: absolute;
   height: 20px;
   width: 54px;
-  background: url("../images/catalog/star.svg") repeat-x;
+  background: url("../images/catalog/stars.svg") repeat-x;
 }
 
 .card_rating_two::before {
@@ -966,7 +972,7 @@ input {
   position: absolute;
   height: 20px;
   width: 36px;
-  background: url("../images/catalog/star.svg") repeat-x;
+  background: url("../images/catalog/stars.svg") repeat-x;
 }
 
 .pagination {
