Защита личного проекта

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -760,7 +760,7 @@ body {
 
 .control_radio:hover::before,
 .control:hover::before {
-  border: 3px solid rgba(131, 179, 211, 1);
+  box-shadow: 0 0 3px rgba(131, 179, 211, 1);
 }
 
 .control_input:checked ~ .control_radio::after {
@@ -859,7 +859,7 @@ body {
 }
 
 .button_reset:focus {
-  border: 3px solid rgba(131, 179, 211, 1);
+  box-shadow: 0 0 3px rgba(131, 179, 211, 1);
 }
 
 .button_reset:active {
@@ -917,7 +917,7 @@ body {
 .filter_card:focus,
 .filter_card_text:focus,
 .filter_text:focus {
-  border: 2px solid rgba(104, 162, 202, 1);
+  box-shadow: 0 0 2px rgba(131, 179, 211, 1);
   outline: none;
 }
 
@@ -997,7 +997,6 @@ body {
   padding: 0 14px 0 14px;
   position: relative;
   left: -18px;
-  appearance: none;
 }
 
 .select_control:hover,
@@ -1008,19 +1007,6 @@ body {
 .select_control:active {
   border: solid 2px rgba(63, 94, 114, 1);
   outline: none;
-}
-
-.cards_all::after {
-  position: absolute;
-  width: 7px;
-  height: 7px;
-  content: "";
-  border-radius: 1px;
-  border-left: 2px solid rgba(0, 0, 0, 1);
-  border-bottom: 2px solid rgba(0, 0, 0, 1);
-  transform: rotate(-46deg);
-  left: 1223px;
-  top: 543px;
 }
 
 .card_button {
@@ -1339,8 +1325,9 @@ body {
 .price_output_style_start:focus,
 .price_output_style_end:focus {
   background-color: rgba(230, 230, 230, 1);
-  border: 3px solid rgba(131, 179, 211, 1);
-  outline: none;
+
+outline: none;
+box-shadow: inset 0 0 3px rgba(131, 179, 211, 1);
 }
 
 .price_output_style_start:active,
@@ -1580,6 +1567,7 @@ body {
 .choice_input_off:focus {
   background-color: rgba(230, 230, 230, 1);
   border: 3px solid rgba(131, 179, 211, 1);
+  outline: none;
 }
 
 .date_invalid {
@@ -1750,7 +1738,9 @@ body {
   left: 118px;
 }
 
-
+.modal_container {
+  display: none;
+}
 
 .visually_hidden {
   visibility: hidden;
